# ex3

./: .gitignore  CMakeLists.txt  Cache__DONT_TOUCH_THIS_FILE.txt  README.md  m1.txt  main.cpp  matrix1.txt  matrix2.txt  matrix_add1.txt  matrix_mult1.txt  matrix_mult2.txt  mult_result.txt  result_crc.txt  result_mult.txt  stdout4.txt  tester.cpp  tester2.cpp
cashe/: Cache__DONT_TOUCH_THIS_FILE.txt
src/: BMPParser.cpp  CMakeLists.txt  CacheManager.cpp  CacheManager.hpp  CacheOperation.cpp  CacheOperation.hpp  Color.cpp  CurrentTime.cpp  CurrentTime.hpp  ErrorCodeException.cpp  ErrorCodeException.hpp  HashCrc32Operation.cpp  HashCrc32Operation.hpp  ImageConvertOperation.cpp  ImageConvertOperation.hpp  ImageRotateOperation.cpp  ImageRotateOperation.hpp  MatrixAddOperation.cpp  MatrixClass.cpp  MatrixClass.hpp  MatrixMultOperation.cpp  MatrixOperation.cpp  MatrixOperation.hpp  MatrixֹAddOperation.hpp  MatrixֹMultOperation.hpp  Operation.cpp  Operation.hpp  StringFunctions.cpp  StringFunctions.hpp  crc32.c  crc32.cpp  crc32.h  crc32.hpp  crc32FileReader.cpp  crc32FileReader.hpp  file_reading.cpp  file_reading.hpp  main.cpp
src/bmp/: BMArrayParserToMatrixes.cpp  BMArrayParserToMatrixes.hpp  BMArrayWithColorPattle.cpp  BMArrayWithColorPattle.hpp  BMPHeaderParser.cpp  BMPHeaderParser.hpp  BMPParser.cpp  BMPParser.hpp  Color.cpp  Color.hpp  ColorTableParser.cpp  ColorTableParser.hpp  DIBHeaderParser.cpp  DIBHeaderParser.hpp  bmp_tester.cpp  bmp_tester.hpp
src/cache_manager/: CacheManager.cpp  CacheManager.hpp  StringFunctions.cpp  StringFunctions.hpp
src/cache_manager/operations/: HashCrc32Operation.cpp  HashCrc32Operation.hpp  ImageConvertOperation.cpp  ImageConvertOperation.hpp  ImageRotateOperation.cpp  ImageRotateOperation.hpp  MatrixAddOperation.cpp  MatrixAddOperation.hpp  MatrixMultOperation.cpp  MatrixMultOperation.hpp  MatrixֹAddOperation.hpp  Operation.cpp  Operation.hpp
src/cache_manager/time/: CurrentTime.cpp  CurrentTime.hpp
src/files/: file_reading.hpp
src/hash/: crc32.cpp  crc32.hpp  crc32FileReader.cpp  crc32FileReader.hpp
src/matrix/: ErrorCodeException.cpp  ErrorCodeException.hpp  MatrixClass.cpp  MatrixClass.hpp
